...
                    </view>
                    <navigationItem key="navigationItem" id="dTy-p9-ddM">
                        <barButtonItem key="leftBarButtonItem" title="SideMenuButton" image="line.horizontal.3" catalog="system" id="BbK-Kc-69Z">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </barButtonItem>
...
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                        <color key="tintColor" red="0.41360836340000001" green="1" blue="0.68079856559999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Listo">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                                    <subviews>
                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontSizeToFit="NO" id="r91-OY-7fK">
                                                            <rect key="frame" x="20" y="0.0" width="332.66666666666674" height="88"/>
                                                            <autoresizingMask key="autoresizingMask"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kq9-ea-g0F" userLabel="Update Quantity">
                                        <rect key="frame" x="215.66666666666663" y="158" width="82" height="30.333333333333343"/>
                                        <accessibility key="accessibilityConfiguration" identifier="quantityTextFieldID"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                        <rect key="frame" x="122" y="226" width="90" height="38"/>
                                        <color key="backgroundColor" red="0.4278586935" green="0.55559084560000005" blue="0.68274111680000005" alpha="0.90753424660000004" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="OK"/>
                                        <connections>
                                            <action selector="verifyLine:" destination="Y1z-ey-h9J" eventType="touchUpInside" id="jLo-aY-gvo"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QUK-Zj-cX0" userLabel="warehouseTextField">
                                        <rect key="frame" x="117.66666666666666" y="119.66666666666669" width="97" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="warehouseTextFieldID"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                        <color key="backgroundColor" white="0.75" alpha="0.49657534246575341" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="Guardar">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <color key="backgroundColor" red="0.16659565270000001" green="0.29113199159999997" blue="0.52538071070000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CARIDAPP" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QRQ-fM-PL8">
                                <rect key="frame" x="19.666666666666657" y="44.000000000000007" width="221" height="92.666666666666686"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <state key="normal">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Agregar Importacion">
                                                    <attributes>
                                                        <color key="NSColor" systemColor="systemBackgroundColor"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="179.66666666666666" height="72"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Costo Unitario:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNQ-up-nSE">
                                                                <rect key="frame" x="0.0" y="0.0" width="179.66666666666666" height="36"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
...
                                                                <color key="highlightedColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s0z-uX-Z8g" userLabel="UnitaryCostTextField">
                                                                <rect key="frame" x="0.0" y="36" width="179.66666666666666" height="36"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="9.9999999999999929" y="217.99999999999997" width="90" height="31"/>
                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                <state key="normal" title="AGREGAR">
