...
class ViewControllerBDA11: UIViewController {
    
    let importationService = ImportationService()
    
    @IBAction func registrarAction(_ sender: Any) {
        
        let alert = UIAlertController(title: "Registrar Datos", message: "Se enviara la informacion al servidor", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Cancelar", style:.cancel, handler: nil))
        
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: {
            action in
            guard let nameP = self.nombreTF.text else {print("Hace falta el nombre"); return}
            guard let descP = self.descripcionTF.text else {print("Hace falta la descripcion"); return}
...
