...
        //navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Save", style: .done, target: self, action: #selector(verifyLine))
        
    }
    
    @IBAction func verifyLine(_ sender: Any) {
        
        let alert = UIAlertController(title: "Corregir Datos", message: "Se corregira la informacion al servidor", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Cancelar", style:.cancel, handler: nil))

        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: {
            action in
            let donationIDPV = Int64(self.lineV!.donationID);
            let lineIDPV = Int64(self.lineV!.lineID);
...
