...
    
    
    
    //Function to update quantity and productExpiration using the API request on VerifyProductService
    @IBAction func verifyDonation(_ sender: Any) {
        
        let alert = UIAlertController(title: "Guardar a almacén", message: "Se corregira la informacion al servidor", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Cancelar", style:.cancel, handler: nil))

        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: {
            action in
            let donationIDPV = Int64(self.DonationV!.donationID);

...
