...
        
        
        sideMenuBtn.target = revealViewController()
        sideMenuBtn.action = #selector(revealViewController()?.revealSideMenu)
        self.hideKeyboardWhenTappedAround()
        
        donatTble.accessibilityIdentifier = "BDA-15 donatTble"
        
        downloadJSON {
            print ("Successful")
            self.donatTble.reloadData()
        }

...
