...
    var DonationV:DonationPV?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.title = "VERIFICACION"
        verifTble.accessibilityIdentifier = "BDA-14 verifTble"
        downloadJSON {
            print ("Successful")
            self.verifTble.reloadData()
        }
        verifTble.delegate = self
        verifTble.dataSource = self
...
